--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/jsonwebtoken": "^9.0.8",
+    "@heroicons/react": "^2.2.0",
+    "@types/jsonwebtoken": "8.5.1",
     "@types/pg": "^8.11.11",
     "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "8.5.1",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "pg": "^8.13.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "use-debounce": "10.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
