--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/pg": "^8.11.11",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "8.5.1",
     "next": "15.1.6",
